--- a/broadcast-graphics.html
+++ b/broadcast-graphics.html
@@ -5,6 +5,12 @@
   <title>Mustangs TV</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="main.css" />
+  <!-- Favicon -->
+<link rel="icon" type="image/png" sizes="90x90" href="/favicon_90x90.png">
+
+<!-- Optional: fallback for older browsers -->
+<link rel="shortcut icon" href="/favicon_90x90.png">
+
 </head>
 <body>
 
@@ -194,3 +200,4 @@
 
 </body>
 </html>
+
