--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
   <title>Oliver Cramel Davies — Video Editor & 3D Generalist</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <link rel="stylesheet" href="main.css" />
-<link id="favicon" rel="icon" type="image/svg+xml" href="./assets/ui/favicon-rec-off.svg">
+  <!-- Favicon -->
+<link rel="icon" type="image/png" sizes="90x90" href="/favicon_90x90.png">
+
+<!-- Optional: fallback for older browsers -->
+<link rel="shortcut icon" href="/favicon_90x90.png">
+
 
 
   <!-- Gate override: DOES NOT change layout, only corrects the breakpoint behavior -->
@@ -404,3 +409,4 @@
   <script src="main.js"></script>
 </body>
 </html>
+
