--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <link rel="stylesheet" href="main.css" />
   <!-- Favicon -->
-<link rel="icon" type="image/png" sizes="90x90" href="assets/ui/favicon_90x90.png">
+<link rel="icon" type="image/png" sizes="90x90" href="https://github.com/o960/portfolio-video/blob/main/assets/ui/favicon_90x90.png">
 
 <!-- Optional: fallback for older browsers -->
-<link rel="shortcut icon" href="assets/ui/favicon_90x90.png">
+<link rel="shortcut icon" href="https://github.com/o960/portfolio-video/blob/main/assets/ui/favicon_90x90.png">
 
 
 
@@ -409,5 +409,6 @@
   <script src="main.js"></script>
 </body>
 </html>
+
 
 
