--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
      aria-label="Open Project A"
      data-preview-title="Project A"
      data-preview-url="./ProjectA.html"
-     data-cover="./assets/img/western_bw_1080.png"></a>
+     data-cover="https://github.com/o960/portfolio-video/blob/main/assets/img/western_bw_1080.png"></a>
 
 
   <a class="plate topB draggable cover plateLink"
@@ -80,14 +80,14 @@
      aria-label="Open Project B"
      data-preview-title="Project B"
      data-preview-url="./project-b.html"
-     data-cover="./assets/img/blockworks_bw_1080.png"></a>
+     data-cover="https://github.com/o960/portfolio-video/blob/main/assets/img/blockworks_bw_1080.png"></a>
 
   <a class="plate topC draggable cover plateLink"
      href="./financial-video.html"
      aria-label="Open Project C"
      data-preview-title="Project C"
      data-preview-url="./project-c.html"
-     data-cover="./assets/img/pineapple_bw_1080.png"></a>
+     data-cover="https://github.com/o960/portfolio-video/blob/main/assets/img/pineapple_bw_1080.png"></a>
 
      <div class="workSamplesTagWrap" aria-hidden="true">
   <div class="workSamplesTag">Samples (Hover on Logos Below)</div>
@@ -409,6 +409,7 @@
   <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
