--- a/broadcast-graphics.html
+++ b/broadcast-graphics.html
@@ -40,28 +40,28 @@
         <div class="media-grid-4">
           <div class="media-tile">
             <img
-              src="/assets/img/Brand_Western_Mustangs_01.png"
+              src="assets/img/Brand_Western_Mustangs_01.png"
               alt="Blockworks Digital Asset Summit stage branding"
             />
           </div>
 
           <div class="media-tile">
             <img
-              src="/assets/img/Western_Mustangs.png"
+              src="assets/img/Western_Mustangs.png"
               alt="Blockworks Research motion background"
             />
           </div>
 
           <div class="media-tile">
             <img
-              src="/assets/img/B-007_Mustang.png"
+              src="assets/img/B-007_Mustang.png"
               alt="Digital Asset Summit 2021 livestream cover"
             />
           </div>
 
           <div class="media-tile">
             <img
-              src="/assets/img/B-006_Mustang.png"
+              src="assets/img/B-006_Mustang.png"
               alt="Permissionless II event branding"
             />
           </div>
@@ -97,7 +97,7 @@
             data-media-type="embed"
             data-media-url="https://oua.tv/watch/4601"
             aria-label="Open OUA.tv sample">
-            <img src="./assets/img/Western_S_001.png" alt="OUA.tv sample cover" />
+            <img src="assets/img/Western_S_001.png" alt="OUA.tv sample cover" />
             <span class="media-play-badge" aria-hidden="true">▶</span>
           </button>
 
@@ -200,4 +200,5 @@
 
 </body>
 </html>
+
 
