--- a/financial-video.html
+++ b/financial-video.html
@@ -5,7 +5,7 @@
   <title>Financial Video Production & Motion — Oliver Cramel Davies</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="main.css" />
-  <link id="favicon" rel="icon" type="image/svg+xml" href="./assets/ui/favicon-rec-off.svg">
+  <link id="favicon" rel="icon" type="image/svg+xml" href="assets/ui/favicon-rec-off.svg">
 
 </head>
 <body>
@@ -50,7 +50,7 @@
             overflow:hidden;
           ">
             <img
-              src="/assets/img/Pineapple_004.png"
+              src="assets/img/Pineapple_004.png"
               alt="Pineapple platform product branding example"
               style="width:100%; height:100%; object-fit:cover;"
             />
@@ -67,7 +67,7 @@
             overflow:hidden;
           ">
             <img
-              src="/assets/img/P_B004.png"
+              src="assets/img/P_B004.png"
               alt="Pineapple brand identity logo system"
               style="width:100%; height:100%; object-fit:contain;"
             />
@@ -84,7 +84,7 @@
             overflow:hidden;
           ">
             <img
-              src="/assets/img/Pineapple_002.png"
+              src="assets/img/Pineapple_002.png"
               alt="Pineapple multi-device product presentation"
               style="width:100%; height:100%; object-fit:cover;"
             />
@@ -101,7 +101,7 @@
             overflow:hidden;
           ">
             <img
-              src="/assets/img/Pineapple_001.png"
+              src="assets/img/Pineapple_001.png"
               alt="Pineapple corporate rebrand announcement visual"
               style="width:100%; height:100%; object-fit:cover;"
             />
@@ -154,3 +154,4 @@
   </footer>
 </body>
 </html>
+
