--- a/financial-media-motion.html
+++ b/financial-media-motion.html
@@ -5,6 +5,10 @@
   <title>Financial Media</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="main.css" />
+  <link rel="icon" type="image/png" sizes="90x90" href="/portfolio-video/assets/ui/favicon_90x90.png">
+
+<!-- Optional: fallback for older browsers -->
+<link rel="shortcut icon" href="/portfolio-video/assets/ui/favicon_90x90.png">
 </head>
 <body>
 
@@ -150,4 +154,5 @@
 
 </body>
 </html>
+
 
