--- a/financial-video.html
+++ b/financial-video.html
@@ -5,7 +5,10 @@
   <title>Financial Video Production & Motion — Oliver Cramel Davies</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="main.css" />
-  <link id="favicon" rel="icon" type="image/svg+xml" href="assets/ui/favicon-rec-off.svg">
+<link rel="icon" type="image/png" sizes="90x90" href="/portfolio-video/assets/ui/favicon_90x90.png">
+
+<!-- Optional: fallback for older browsers -->
+<link rel="shortcut icon" href="/portfolio-video/assets/ui/favicon_90x90.png">
 
 </head>
 <body>
@@ -154,4 +157,5 @@
   </footer>
 </body>
 </html>
+
 
