--- a/broadcast-graphics.html
+++ b/broadcast-graphics.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="main.css" />
   <!-- Favicon -->
-<link rel="icon" type="image/png" sizes="90x90" href="/portfolio-video/assets/ui/favicon_90x90.png">
+<link rel="icon" type="image/png" sizes="90x90" href="assets/ui/favicon_90x90.png">
 
 <!-- Optional: fallback for older browsers -->
-<link rel="shortcut icon" href="/portfolio-video/assets/ui/favicon_90x90.png">
+<link rel="shortcut icon" href="assets/ui/favicon_90x90.png">
 
 </head>
 <body>
@@ -200,6 +200,7 @@
 
 </body>
 </html>
+
 
 
 
