--- a/financial-video.html
+++ b/financial-video.html
@@ -5,10 +5,10 @@
   <title>Financial Video Production & Motion — Oliver Cramel Davies</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="main.css" />
-<link rel="icon" type="image/png" sizes="90x90" href="/portfolio-video/assets/ui/favicon_90x90.png">
+<link rel="icon" type="image/png" sizes="90x90" href="assets/ui/favicon_90x90.png">
 
 <!-- Optional: fallback for older browsers -->
-<link rel="shortcut icon" href="/portfolio-video/assets/ui/favicon_90x90.png">
+<link rel="shortcut icon" href="assets/ui/favicon_90x90.png">
 
 </head>
 <body>
@@ -157,5 +157,6 @@
   </footer>
 </body>
 </html>
+
 
 
