--- a/broadcast-graphics.html
+++ b/broadcast-graphics.html
@@ -34,7 +34,7 @@
           Brand Reference Examples
         </h2>
         <p style="margin:0 0 14px 0; opacity:.75; max-width:860px; line-height:1.55;">
-          This section presents publicly available product and technology branding examples used strictly for reference and inspiration. These assets were not created by me and are shown to demonstrate visual identity systems, brand consistency, and presentation standards commonly used in professional financial software and technology environments.
+          This section presents publicly available product and technology branding examples used strictly for reference and inspiration. These assets were not created by me and are shown to demonstrate visual identity systems, brand consistency, and presentation standards commonly used in professional sports broadcasting and technology environments.
         </p>
 
         <div class="media-grid-4">
@@ -200,6 +200,7 @@
 
 </body>
 </html>
+
 
 
 
