--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
       <div class="text-grid">
   <span>Capital Lending Center</span>
 
-  <img src="/assets/media/logo_sidefx.png" alt="SideFX logo" class="client-logo" />
-  <img src="/assets/media/BLE_Transparent.png" alt="Blender Foundation logo" class="client-logo" />
-  <img src="/assets/media/Redacted-LogoLockup-Dark-TransBG-72dpi.png" alt="Redacted Finance logo" class="client-logo" />
-  <img src="/assets/media/Blockworks_Logo.png" alt="Blockworks logo" class="client-logo" />
-  <img src="/assets/media/Western_Logo.png" alt="Western University logo" class="client-logo" />
-  <img src="/assets/media/blob.png" alt="York University logo" class="client-logo" />
+  <img src="assets/media/logo_sidefx.png" alt="SideFX logo" class="client-logo" />
+  <img src="assets/media/BLE_Transparent.png" alt="Blender Foundation logo" class="client-logo" />
+  <img src="assets/media/Redacted-LogoLockup-Dark-TransBG-72dpi.png" alt="Redacted Finance logo" class="client-logo" />
+  <img src="assets/media/Blockworks_Logo.png" alt="Blockworks logo" class="client-logo" />
+  <img src="assets/media/Western_Logo.png" alt="Western University logo" class="client-logo" />
+  <img src="assets/media/blob.png" alt="York University logo" class="client-logo" />
 
   <span>TANCH Film</span>
 </div>
@@ -231,3 +231,4 @@
   <script src="js/app.js"></script>
 </body>
 </html>
+
