--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=IBM+Plex+Mono:wght@400;500;600&display=swap" rel="stylesheet">
   <!-- Favicon -->
-<link rel="icon" type="image/png" href="/assets/media/BG_main.png" />
-<link rel="apple-touch-icon" href="/assets/media/BG_main.png" />
+<link rel="icon" type="image/png" href="assets/media/BG_main.png" />
+<link rel="apple-touch-icon" href="assets/media/BG_main.png" />
 
 
   <!-- Site styles -->
@@ -50,7 +50,7 @@
         </div>
 
         <div class="block block--one block--image">
-          <img src="/assets/media/BG_main.png" alt="Featured visual" />
+          <img src="assets/media/BG_main.png" alt="Featured visual" />
         </div>
 
         <div class="slim-bar slim-bar--bottom slim-bar--caption">
@@ -109,10 +109,10 @@
 
     <!-- VIDEO LINKS -->
     <nav class="video-links">
-      <a href="/broadcast-graphics.html" class="video-link" data-video="mustangs">
+      <a href="broadcast-graphics.html" class="video-link" data-video="mustangs">
         Mustangs TV University Sports Broadcasting (Western University), 2025
       </a>
-      <a href="/financial-media-motion.html" class="video-link" data-video="blockworks">
+      <a href="financial-media-motion.html" class="video-link" data-video="blockworks">
         Blockworks LLC, 2023
       </a>
     </nav>
@@ -231,4 +231,5 @@
   <script src="js/app.js"></script>
 </body>
 </html>
+
 
