--- a/index.html
+++ b/index.html
@@ -225,11 +225,12 @@
     </div>
   </section>
 
-  <audio id="sfx-hover" src="/assets/sfx/Mouse_Hover.mp3" preload="auto"></audio>
+  <audio id="sfx-hover" src="assets/sfx/Mouse_Hover.mp3" preload="auto"></audio>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
+
 
 
