--- a/financial-media-motion.html
+++ b/financial-media-motion.html
@@ -11,10 +11,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 <!-- Favicon -->
-<link rel="icon" type="image/png" href="/assets/media/BG_main.png" />
-<link rel="apple-touch-icon" href="/assets/media/BG_main.png" />
+<link rel="icon" type="image/png" href="assets/media/BG_main.png" />
+<link rel="apple-touch-icon" href="assets/media/BG_main.png" />
 
-  <link rel="stylesheet" href="/css/case-study.css" />
+  <link rel="stylesheet" href="css/case-study.css" />
 </head>
 <body>
   <main class="page">
@@ -113,7 +113,7 @@
 
             <div class="ctrl-spacer" aria-hidden="true"></div>
 
-            <a class="ctrl-link" href="#" target="_blank" rel="noopener" data-ctrl="youtube">
+            <a class="ctrl-link" href="https://www.youtube.com/" target="_blank" rel="noopener" data-ctrl="youtube">
               Watch on YouTube ↗
             </a>
 
@@ -185,10 +185,10 @@
 
     <footer class="footer">
       <span>© <span data-year></span> Oliver Cramel Davies</span>
-      <a class="small-link" href="./index.html">Back to home</a>
+      <a class="small-link" href="index.html">Back to home</a>
     </footer>
   </main>
 
-  <script src="/js/case-study.js" defer></script>
+  <script src="js/case-study.js" defer></script>
 </body>
 </html>
