--- a/broadcast-graphics.html
+++ b/broadcast-graphics.html
@@ -11,10 +11,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 <!-- Favicon -->
-<link rel="icon" type="image/png" href="/assets/media/BG_main.png" />
-<link rel="apple-touch-icon" href="/assets/media/BG_main.png" />
+<link rel="icon" type="image/png" href="assets/media/BG_main.png" />
+<link rel="apple-touch-icon" href="assets/media/BG_main.png" />
 
-  <link rel="stylesheet" href="/css/case-study.css" />
+  <link rel="stylesheet" href="css/case-study.css" />
 </head>
 <body>
   <main class="page">
@@ -191,6 +191,6 @@
     </footer>
   </main>
 
-  <script src="/js/case-study.js" defer></script>
+  <script src="js/case-study.js" defer></script>
 </body>
 </html>
