--- a/broadcast-graphics.html
+++ b/broadcast-graphics.html
@@ -31,7 +31,7 @@
          data-watch-url="https://oua.tv/watch/4601"
          data-title="OUA.tv Sample 01">
         <div class="cover" aria-hidden="true">
-          <img src="/assets/thumbs/401_MS.png" alt="Sample 01 cover" loading="lazy" />
+          <img src="assets/thumbs/401_MS.png" alt="Sample 01 cover" loading="lazy" />
         </div>
         <div class="sample-meta">
           <div class="sample-title">Sample 01</div>
@@ -44,7 +44,7 @@
          data-watch-url="https://oua.tv/watch/3685"
          data-title="OUA.tv Sample 02">
         <div class="cover" aria-hidden="true">
-          <img src="/assets/thumbs/391_MB.png" alt="Sample 02 cover" loading="lazy" />
+          <img src="assets/thumbs/391_MB.png" alt="Sample 02 cover" loading="lazy" />
         </div>
         <div class="sample-meta">
           <div class="sample-title">Sample 02</div>
@@ -57,7 +57,7 @@
          data-watch-url="https://oua.tv/select-package/3290"
          data-title="OUA.tv Sample 03">
         <div class="cover" aria-hidden="true">
-          <img src="/assets/thumbs/3891_MF.png" alt="Sample 03 cover" loading="lazy" />
+          <img src="assets/thumbs/3891_MF.png" alt="Sample 03 cover" loading="lazy" />
         </div>
         <div class="sample-meta">
           <div class="sample-title">Sample 03</div>
@@ -70,7 +70,7 @@
          data-watch-url="https://oua.tv/watch/4594"
          data-title="OUA.tv Sample 04">
         <div class="cover" aria-hidden="true">
-          <img src="/assets/thumbs/3861_WS.png" alt="Sample 04 cover" loading="lazy" />
+          <img src="assets/thumbs/3861_WS.png" alt="Sample 04 cover" loading="lazy" />
         </div>
         <div class="sample-meta">
           <div class="sample-title">Sample 04</div>
