--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="block-wrapper sfx-hover">
         <div class="slim-bar slim-bar--top slim-bar--text">
           <div class="slimbar-line">
-            Designing visual experiences from passion and cross-functional identity
+            Designing visual experiences across motion, media and systems
           </div>
           <div class="slimbar-line slimbar-line--meta">
             Designed by Oliver Cramel Davies, 2026
@@ -231,6 +231,7 @@
   <script src="js/app.js"></script>
 </body>
 </html>
+
 
 
 
