Fix HTML formatting and structure issues

--- a/index.html
+++ b/index.html
@@ -137,6 +137,18 @@
           <path d="M12 .5C5.73.5.5 5.74.5 12.02c0 5.1 3.29 9.42 7.86 10.95.58.11.79-.25.79-.56v-2.1c-3.2.7-3.87-1.38-3.87-1.38-.53-1.34-1.3-1.7-1.3-1.7-1.06-.72.08-.7.08-.7 1.17.08 1.79 1.21 1.79 1.21 1.04 1.78 2.73 1.27 3.4.97.1-.76.4-1.27.72-1.56-2.56-.29-5.26-1.28-5.26-5.7 0-1.26.45-2.3 1.2-3.11-.12-.29-.52-1.46.11-3.05 0 0 .98-.31 3.2 1.19a11.1 11.1 0 0 1 5.82 0c2.22-1.5 3.2-1.19 3.2-1.19.63 1.59.23 2.76.11 3.05.75.81 1.2 1.85 1.2 3.11 0 4.43-2.7 5.41-5.27 5.7.41.35.78 1.04.78 2.11v3.13c0 .31.21.67.8.56A11.52 11.52 0 0 0 23.5 12.02C23.5 5.74 18.27.5 12 .5z"/>
         </svg>
       </a>
+      <a
+  href="https://www.linkedin.com/in/YOUR_USERNAME/"
+  target="_blank"
+  rel="noopener noreferrer"
+  aria-label="LinkedIn"
+  class="footer-icon sfx-hover sfx-click"
+>
+  <svg viewBox="0 0 24 24" aria-hidden="true">
+    <path d="M4.98 3.5C4.98 4.88 3.88 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4V24h-4V8zm7.5 0h3.8v2.2h.05c.53-1 1.82-2.2 3.75-2.2 4 0 4.7 2.6 4.7 6V24h-4v-7.1c0-1.7 0-3.9-2.4-3.9s-2.8 1.9-2.8 3.8V24h-4V8z"/>
+  </svg>
+</a>
+
     </div>
   </footer>
 
@@ -231,6 +243,7 @@
   <script src="js/app.js"></script>
 </body>
 </html>
+
 
 
 
