Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </svg>
       </a>
       <a
-  href="www.linkedin.com/in/oliver-cramel-davies-84b1533a7"
+  href="https://linkedin.com/in/oliver-cramel-davies-84b1533a7"
   target="_blank"
   rel="noopener noreferrer"
   aria-label="LinkedIn"
@@ -243,6 +243,7 @@
   <script src="js/app.js"></script>
 </body>
 </html>
+
 
 
 
