--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <div class="slim-bar slim-bar--bottom slim-bar--caption">
           <div class="figure-caption">
             <span class="figure-label">Figure 1.</span>
-            Above: Prompted by Oliver Cramel Davies.<br />
-            AI-assisted image generation.
+            Above: Placeholder by Oliver Cramel Davies.<br />
+            Underdevelopment.
           </div>
         </div>
       </div>
@@ -243,6 +243,7 @@
   <script src="js/app.js"></script>
 </body>
 </html>
+
 
 
 
